# unicorn-fuzz

./: .clang-format  .clangd  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  basic.c  basic.py  int_overflow.c  int_overflow.py  test_coverage.cpp
examples/arm/: _dump_int_overflow_arm32el.json  int_overflow  int_overflow.py
examples/mips/: Dockerfile  _dump_int_overflow_mips32el.json  build.sh  dump.gdb  int_overflow  int_overflow.py  readme.txt
include/: lfu.h
python-bindings/: pyproject.toml
python-bindings/lfu/: __init__.py  __main__.py  bind.py  lfu.py  snapshot.py
scripts/: gdb_dump_snapshot.py
src/: abi.cpp  abi.h  allocator.cpp  allocator.h  coverage.cpp  coverage.h  crash_collector.cpp  crash_collector.h  crash_info.cpp  crash_info.h  defs.h  lfu.cpp  state.h
test/: CMakeLists.txt  test_allocator.cpp
